# biolm-sdk

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.rst  HISTORY.rst  Makefile  NOTICE  PIPELINE_ARCHITECTURE_GUIDE.md  PIPELINE_QUICKSTART.md  README.md  README.rst  VERSIONING.md  llms.txt  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: test-areas.yml
.github/workflows/: ci.yml  docs.yml  nightly.yml  publish.yml
biolm/: __init__.py  cli.py  finetune.py  models.py  platform.py  protocol_runs.py  protocols.py  protocols_mlflow.py  volumes.py  workspaces.py
biolm/cli/: __init__.py  entry.py  theme.py
biolm/core/: auth.py  const.py  http.py  paths.py  seqflow_auth.py
biolm/datasets/: __init__.py  backends.py  client.py  dataset.py  discovery.py  errors.py  paths.py  schema.py
biolm/hub/: __init__.py  config.py
biolm/io/: csv.py  fasta.py  pdb.py
biolm/lab/: __init__.py  api.py  config.py  connectors.py  runs.py
biolm/models/: __init__.py  definition.py  errors.py  paths.py
biolm/pipeline/: PIPELINE_VISION_AND_ARCHITECTURE.md  README.md  __init__.py  base.py  data.py  datastore.py  datastore_duckdb.py  generative.py  pipeline_def.py  requirements.txt
biolm/plugins/: __init__.py
biolm/protocol_runtime/: __init__.py
biolm/protocols/: __init__.py  model.py  outputs.py  runs.py  validation.py
biolm/seqframe/: __init__.py  core.py  dataset_bridge.py  engine.py  enrichment.py  importers.py  metadata.py  ops.py  rows.py
biolmai/: __init__.py  _shim.py
docs/: Makefile  ORPHANS_AND_DUPLICATES.md  authoring-guide.rst  changelog.rst  conf.py  index.rst  make.bat
docs/_static/: caption-links.js  custom.css
docs/api-reference/: biolm.cli.rst  biolm.core.rst  biolm.datasets.rst  biolm.hub.data.rst  biolm.hub.rst  biolm.models.rst  biolm.plugins.mlflow.rst  biolm.plugins.rst  biolm.protocols.rst  biolm.rst  biolm.seqframe.rst  index.rst
docs/cli/: account.rst  dataset.rst  hub.rst  index.rst  login.rst  logout.rst  model.rst  overview.rst  protocol.rst  reference.rst  status.rst  whoami.rst  workspace.rst
docs/getting-started/: authentication.rst  migration-1.0.rst  overview.rst
docs/guide/: account-management.rst  authentication.rst  biolm-hub.rst  choosing-models.rst  client-interfaces.rst  faq.rst  finetuning-models.rst  how-biolms-work.rst  installation.rst  (+21 more)
scripts/: demo_clustering_diversity.py  demo_explore_pipeline.py  demo_pipeline_500.py  generate_docs_manifest.py  pipeline_antibody_antifold.py  pipeline_antibody_full.py  pipeline_mlm_resume.py  pipeline_mpnn_multi.py  pipeline_peptide_embeddings.py  pipeline_petase_multimodel.py  pipeline_simple_example.py  pipeline_stability_engineering.py  run_real_models.py  run_real_pipelines.py  select_integration_tests.py
tests/: conftest.py  test_abatch_calls.py  test_aclient.py  test_advanced_features.py  test_auth_integration.py  test_batch_error_retry.py  test_batch_errors.py  test_biolmai.py  test_cli_help.py  test_cli_login.py  test_cli_model_build.py  test_cli_platform.py  test_cli_protocol_runs.py  test_cli_theme.py  test_client.py  test_concurrent_batches.py  test_const_env.py  test_datasets_local.py  test_datasets_mlflow.py  test_design_primitives.py  test_docs_manifest.py  test_duckdb_datastore.py  test_embedding_pipeline.py  test_example_generation.py  test_generation_workingset.py  test_init_extras_gate.py  test_integration.py  test_io.py  test_iterables.py  test_jupyter_context.py  test_lab_api.py  test_lab_config.py  test_lab_runs.py  test_max_items.py  test_model_definition.py  test_oauth_auth.py  test_pipeline_complete.py  test_platform_client.py  test_protocol_client.py  test_protocol_package.py  (+8 more)
(+85 files in other folders)
